codepkg/objects/F_42_Personnel_Info__c.object
<CustomObject>
    <description>This object is used to capture the Personnel info for each f-42/ Personnel info includes the job title, SSN and Start and end time</description>
    <fields>
        <fullName>Base_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this checkbox is checked, base rate should be considered irrespective of the salary survey rate</inlineHelpText>
        <label>Base Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_42__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F-42</label>
        <referenceTo>F42__c</referenceTo>
        <relationshipLabel>12. PERSONNEL INFO</relationshipLabel>
        <relationshipName>F_42_Personnel_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Job_Title_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates that job title is not present in the salary survey or non-suppression list</inlineHelpText>
        <label>Is Job Title Other?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACS_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MACS ID</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_To_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal To Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rank_Job_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rank / Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last 4 SSN#</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>F-42 Personnel Info</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>F-42 Personnel Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>